--- a/templates/index.html
+++ b/templates/index.html
@@ -357,7 +357,7 @@
                     <div class="item">
                         <h3>Stay up to date</h3>
                         <p>Subscribe to our newsletter.</p>
-                        <form action="{% url 'web:subscribe' %}"  method="post">
+                        <form action="{% url 'web:subscribe' %}"  method="post" class="ajax">
                             {% csrf_token %}
                             <input
                                 type="email"
@@ -416,6 +416,7 @@
 
         <script src="{% static 'js/jquery-3.5.1.min.js' %}"></script>
         <script src="{% static 'js/owl.carousel.min.js' %}"></script>
+        <script src="{% static 'js/sweetalert2.min.js' %}"></script>
         <script src="{% static 'js/script.js' %}"></script>
     </body>
 </html>
